# DeepIFSAC

./: .gitignore  README.md  augmentations.py  corruptor.py  data_openml.py  my_train.py  pretraining.py  pyproject.toml  utils.py
deepifsac/: corruptor.py
deepifsac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deepifsac/missingness/: sampler.py
deepifsac/models/: __init__.py
docs/superpowers/plans/: 2026-04-09-sklearn-imputer.md
docs/superpowers/specs/: 2026-04-09-sklearn-imputer-design.md
imputer/: __init__.py  imputer.py  preprocessor.py
tests/imputer/: test_imputer.py  test_preprocessor.py
