[project]
name = "deepifsac"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "einops>=0.6",
    "openml>=0.13",
    "matplotlib>=3.7",
    "xgboost>=1.7",
    "pytest>=7.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
